--- a/mern-todo-app/backend/.env
+++ b/mern-todo-app/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://mernuser:TestPass123!@cluster0.gdua7iq.mongodb.net/mern-todo?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://rmdtalha_db_user:test1234@cluster0.gdua7iq.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=secret_key
